Fixed bug #63726 (Memleak with static properties and internal/user classes)

No test scripts provided (will try to find one)